--- a/templates/sync-catalog-deployment.yaml
+++ b/templates/sync-catalog-deployment.yaml
@@ -95,6 +95,12 @@ spec:
                 {{- if .Values.syncCatalog.k8sSourceNamespace }}
                 -k8s-source-namespace="{{ .Values.syncCatalog.k8sSourceNamespace}}" \
                 {{- end }}
+                {{- range $value := .Values.syncCatalog.k8sAllowNamespaces }}
+                -allow-namespace="{{ $value }}" \
+                {{- end }}
+                {{- range $value := .Values.syncCatalog.k8sDenyNamespaces }}
+                -deny-namespace="{{ $value }}" \
+                {{- end }}
                 -k8s-write-namespace=${NAMESPACE} \
                 {{- if (not .Values.syncCatalog.syncClusterIPServices) }}
                 -sync-clusterip-services=false \
@@ -117,6 +123,16 @@ spec:
                 {{- if .Values.syncCatalog.addK8SNamespaceSuffix}}
                 -add-k8s-namespace-suffix \
                 {{- end}}
+                {{- if .Values.global.consulNamespacesEnabled }}
+                -enable-namespaces=true \
+                {{- if .Values.syncCatalog.consulNamespaces.consulNamespaceName }}
+                -consul-namespace={{ .Values.syncCatalog.consulNamespaces.consulNamespaceName }} \
+                {{- end }}
+                {{- if .Values.syncCatalog.consulNamespaces.mirrorK8s }}
+                -enable-namespace-mirroring=true \
+                -mirroring-prefix={{ .Values.syncCatalog.consulNamespaces.mirroringPrefix }} \
+                {{- end }}
+                {{- end }}
           livenessProbe:
             httpGet:
               path: /health/ready
