--- a/templates/connect-inject-deployment.yaml
+++ b/templates/connect-inject-deployment.yaml
@@ -42,7 +42,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
             {{- /* An ACL token is only necessary for the connect injector if namespaces are enabled */}}
-            {{- if .Values.global.consulNamespaces.enabled }}
+            {{- if .Values.global.consulNamespacesEnabled }}
             {{- if (and .Values.connectInject.aclInjectToken.secretName .Values.connectInject.aclInjectToken.secretKey) }}
             - name: CONSUL_HTTP_TOKEN
               valueFrom:
@@ -86,18 +86,20 @@ spec:
                 {{- if (and .Values.connectInject.centralConfig.enabled .Values.connectInject.centralConfig.defaultProtocol) }}
                 -default-protocol="{{ .Values.connectInject.centralConfig.defaultProtocol }}" \
                 {{- end }}
-                {{- if .Values.global.consulNamespaces.enabled }}
+                {{- range $value := .Values.connectInject.consulNamespaces.k8sAllowNamespaces }}
+                -allow-namespace="{{ $value }}" \
+                {{- end }}
+                {{- range $value := .Values.connectInject.consulNamespaces.k8sDenyNamespaces }}
+                -deny-namespace="{{ $value }}" \
+                {{- end }}
+                {{- if .Values.global.consulNamespacesEnabled }}
                 -enable-namespaces=true \
-                -consul-namespace={{ .Values.global.consulNamespaces.consulNamespaceName }} \
-                {{- range $value := .Values.connectInject.allowNamespacesList }}
-                -allow-namespace={{ $value }} \
+                {{- if .Values.connectInject.consulNamespaces.consulNamespaceName }}
+                -consul-namespace={{ .Values.connectInject.consulNamespaces.consulNamespaceName }} \
                 {{- end }}
-                {{- range $value := .Values.connectInject.denyNamespacesList }}
-                -deny-namespace={{ $value }} \
-                {{- end }}
-                {{- if .Values.global.consulNamespaces.mirrorK8s }}
+                {{- if .Values.connectInject.consulNamespaces.mirrorK8s }}
                 -enable-namespace-mirroring=true \
-                -mirroring-prefix={{ .Values.global.consulNamespaces.mirroringPrefix }} \
+                -mirroring-prefix={{ .Values.connectInject.consulNamespaces.mirroringPrefix }} \
                 -acl-binding-rule-selector={{ .Values.connectInject.aclBindingRuleSelector }} \
                 {{- end }}
                 {{- end }}
@@ -154,7 +156,7 @@ spec:
             secretName: {{ template "consul.fullname" . }}-ca-cert
         {{- end }}
       {{- end }}
-      {{- if and .Values.global.bootstrapACLs .Values.global.consulNamespaces.enabled }}
+      {{- if and .Values.global.bootstrapACLs .Values.global.consulNamespacesEnabled }}
       initContainers:
       - name: injector-acl-init
         image: {{ .Values.global.imageK8S }}
@@ -163,7 +165,7 @@ spec:
           - "-ec"
           - |
             consul-k8s acl-init \
-              -secret-name="{{ template "consul.fullname" . }}-connect-injector-acl-token" \
+              -secret-name="{{ template "consul.fullname" . }}-connect-inject-acl-token" \
               -k8s-namespace={{ .Release.Namespace }} \
               -init-type="sync"
       {{- end }}
