--- a/values.yaml
+++ b/values.yaml
@@ -40,6 +40,7 @@ global:
   # remove these checks to make the sync work.
   # If using bootstrapACLs then must be >= 0.10.1.
   # If using connect inject then must be >= 0.10.1.
+  # If using Consul namespaces, must be >= 0.12.
   imageK8S: "hashicorp/consul-k8s:0.11.0"
 
   # datacenter is the name of the datacenter that the agents should register
@@ -110,6 +111,14 @@ global:
     # If httpsOnly is true, Consul will disable the HTTP port on both
     # clients and servers and only accept HTTPS connections.
     httpsOnly: true
+
+  # [Enterprise Only] consulNamespacesEnabled indicates that you are running
+  # Consul v1.7+ with a valid Consul Enterprise license and would like to make
+  # use of configuration beyond registering everything into the `default` Consul
+  # namespace. Requires consul-k8s v0.12+.
+  # Additional configuration options are found in the `consulNamespaces` section
+  # of both the catalog sync and connect injector.
+  consulNamespacesEnabled: false
 
   # consulNamespaces are an Enterprise only feature available in Consul v1.7+.
   # A valid Consul Enterprise license is required to make use of this feature.
@@ -522,23 +531,47 @@ connectInject:
   #     namespace-label: label-value
   namespaceSelector: null
 
-  # allowNamespacesList is a list of k8s namespaces to allow Connect sidecar
-  # injection in. If a k8s namespace is not included or is listed in `denyNamespacesList`,
+  # k8sAllowNamespaces is a list of k8s namespaces to allow Connect sidecar
+  # injection in. If a k8s namespace is not included or is listed in `k8sDenyNamespaces`,
   # pods in that k8s namespace will not be injected even if they are explicitly
-  # annotated. Use "*" to automatically allow all k8s namespaces.
+  # annotated. Use ["*"] to automatically allow all k8s namespaces.
+  #
   # For example, ["namespace1", "namespace2"] will only allow pods in the k8s
   # namespaces `namespace1` and `namespace2` to have Connect sidecars injected
   # and registered with Consul. All other k8s namespaces will be ignored.
-  # Note: `denyNamespacesList` takes precedence over values defined here and
+  # Note: `k8sDenyNamespaces` takes precedence over values defined here and
   # `namespaceSelector` takes precedence over both since it is applied first.
-  # Requires consul-k8s v0.x+
-  allowNamespacesList: ["*"]
+  # Requires consul-k8s v0.12+
+  k8sAllowNamespaces: ["*"]
 
-  # denyNamespacesList is a list of k8s namespaces that should not allow Connect
-  # sidecar injection. This list takes precedence over `allowNamespacesList`.
-  # Note: `namespaceSelector` takes precedence over this since it is applied first
-  # Requires consul-k8s v0.x+
-  denyNamespacesList: []
+  # k8sDenyNamespaces is a list of k8s namespaces that should not allow Connect
+  # sidecar injection. This list takes precedence over `k8sAllowNamespaces`.
+  # `*` is not supported because then nothing would be allowed to be injected.
+  # Note: `namespaceSelector` takes precedence over this since it is applied first.
+  # Requires consul-k8s v0.12+.
+  k8sDenyNamespaces: ["kube-system", "kube-public"]
+
+  # [Enterprise Only] These settings manage the connect injector's interaction with
+  # Consul namespaces (requires consul-ent v1.7+ and consul-k8s v0.12+).
+  # Also, the `global.consulNamespacesEnabled` setting must be set to true.
+  consulNamespaces:
+    # consulNamespaceName is the name of the Consul namespace to register all
+    # k8s services into. If the Consul namespace does not already exist,
+    # it will be created. This will be ignored if `mirrorK8S` is true.
+    consulNamespaceName: "default"
+
+    # mirrorK8S causes k8s services to be registered into a Consul namespace
+    # of the same name as their k8s namespace, optionally prefixed if
+    # `mirroringPrefix` is set below. If the Consul namespace does not
+    # already exist, it will be created. Turning this on overrides the
+    # `consulNamespaceName` setting.
+    mirrorK8S: false
+
+    # If `mirrorK8S` is set to true, `mirroringPrefix` allows each Consul namespace
+    # to be given a prefix. For example, if `mirroringPrefix` is set to "k8s-", a
+    # service in the k8s `staging` namespace will be registered into the
+    # `k8s-staging` Consul namespace.
+    mirroringPrefix: ""
 
   # The certs section configures how the webhook TLS certs are configured.
   # These are the TLS certs for the Kube apiserver communicating to the
