--- a/templates/sync-catalog-deployment.yaml
+++ b/templates/sync-catalog-deployment.yaml
@@ -66,6 +66,8 @@ spec:
               value: https://$(HOST_IP):8501
             - name: CONSUL_CACERT
               value: /consul/tls/ca/tls.crt
+            - name: CONSUL_HTTP_SSL_VERIFY
+              value: "false"
             {{- else }}
             - name: CONSUL_HTTP_ADDR
               value: http://$(HOST_IP):8500
