--- a/values.yaml
+++ b/values.yaml
@@ -40,7 +40,7 @@ global:
   # remove these checks to make the sync work.
   # If using bootstrapACLs then must be >= 0.10.1.
   # If using connect inject then must be >= 0.10.1.
-  imageK8S: "ishustava/consul-k8s-dev:latest"
+  imageK8S: "ishustava/consul-k8s-dev:auto-encrypt"
 
   # datacenter is the name of the datacenter that the agents should register
   # as. This can't be changed once the Consul cluster is up and running
